# Loader

./: README.md  pyproject.toml
loader/: pyproject.toml
loader/src/loader/: __init__.py
src/loader/: loader.py
