[project]
name = "loader"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikolaj"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = ["arcade"]

[tool.poetry]
packages = [{include = "loader", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
